<resources>
    <string name="app_name"></string>
    <string name="quanLyNhaThuoc">Quản Lý Nhà Thuốc</string>
    <string name="nhaThuoc">Nhà Thuốc</string>
    <string name="hoaDon">Hóa Đơn</string>
    <string name="chiTietBanLe">Chi Tiết Bán Lẻ</string>
    <string name="thuoc">Thuốc</string>
    <string name="thoat">Thoát</string>
    <string name="them">Thêm</string>
    <string name="xoa">Xóa</string>
    <string name="sua">Sửa</string>
    <string name="danhSach">Danh Sách</string>
    <string name="timKiem">Tìm Kiếm</string>
    <string name="maNhaThuoc">Mã Nhà Thuốc</string>
    <string name="tenNhaThuoc">Tên Nhà Thuốc</string>
    <string name="diaChi">Địa Chỉ</string>
    <string name="xacNhan">Xác Nhận</string>
    <string name="lamMoi">Làm Mới</string>
    <string name="huy">Hủy</string>
    <string name="troVe">Trở Về</string>
    <string name="themNhaThuoc">Thêm Nhà Thuốc</string>
    <string name="suaNhaThuoc">Sửa Nhà Thuốc</string>
    <string name="soHoaDon">Số Hóa Đơn</string>
    <string name="ngayHoaDon">Ngày Hóa Đơn</string>
    <string name="themHoaDon">Thêm Hóa Đơn</string>
    <string name="maThuoc">Mã Thuốc</string>
    <string name="soLuong">Số Lượng</string>
    <string name="themChiTietBanLe">Thêm Chi Tiết Bán Lẻ</string>
    <string name="tenThuoc">Tên Thuốc</string>
    <string name="DVT">Đơn Vị Tính</string>
    <string name="donGia">Đơn Giá</string>
    <string name="hinhAnh">Hình Ảnh</string>
    <string name="themThuoc">Thêm Thuốc</string>
    <string name="suaThuoc">Sửa Thuốc</string>
    <string name="suaHoaDon">Sửa Hóa Đơn</string>
    <string name="suaChiTietBanLe">Sửa Chi Tiết Bán Lẻ</string>
    <string name="thongKeDoanhThu">Thống Kê Doanh Thu</string>
    <string name="doanhThu">Doanh Thu</string>
    <string name="thoiGian">Thời Gian</string>
    <string name="bieuDo">Biểu Đồ</string>
    <string name="thang">Tháng</string>
    <string name="nam">Năm</string>
</resources>