<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/thongKeDoanhThu"
        android:textSize="40dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#F44336"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/timKiem"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#4CAF50"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="TÌM KIẾM" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/maNhaThuoc"
            android:textStyle="bold"
            android:textColor="#F44336"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tenNhaThuoc"
            android:textStyle="bold"
            android:textColor="#F44336"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/doanhThu"
            android:textStyle="bold"
            android:textColor="#F44336"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/thoiGian"
            android:textStyle="bold"
            android:textColor="#F44336"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/lvDoanhThu"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginBottom="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/NT_btnBieuDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bieuDo"
            app:backgroundTint="#4CAF50"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/NT_btnTroVe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/troVe"
            app:backgroundTint="#4CAF50"
            />
    </LinearLayout>

</LinearLayout>