<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_key"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/DT_maNT"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/maNhaThuoc"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/DT_TenNT"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tenNhaThuoc"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:id="@+id/DT_doanhThu"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/doanhThu"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:id="@+id/DT_thoiGian"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/thoiGian"
            />
    </LinearLayout>
</LinearLayout>