<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_key"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/listMaThuoc"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/maThuoc"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/listTenThuoc"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tenThuoc"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/listDVT"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/DVT"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/listDonGia"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/donGia"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            />

        <ImageView
            android:id="@+id/listImage"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>
</LinearLayout>