<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/suaThuoc"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maThuoc"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtMaThuoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/maThuoc"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenNhaThuoc"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtTenThuoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Tên Thuốc"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DVT"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtDVT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Đơn vị tính"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donGia"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtDonGia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Đơn Giá"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
            <!--android:layout_marginBottom="50dp"-->
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/hinhAnh"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgAdd_Update"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/medical_icon"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/btnSuaT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xacNhan"
                android:backgroundTint="#4CAF50"
                />

            <Button
                android:id="@+id/btnReloadformSua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lamMoi"
                android:backgroundTint="#4CAF50"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huy"
                android:backgroundTint="#4CAF50"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>