<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/suaHoaDon"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soHoaDon"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtSoHoaDon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/soHoaDon"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ngayHoaDon"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtNgayHoaDon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/ngayHoaDon"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maNhaThuoc"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <Spinner
            android:id="@+id/spnMaNT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:spinnerMode="dropdown"></Spinner>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/btnSuaHD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xacNhan"
                app:backgroundTint="#4CAF50"
                />

            <Button
                android:id="@+id/btnReloadformSua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lamMoi"
                app:backgroundTint="#4CAF50"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huy"
                app:backgroundTint="#4CAF50"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>