<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_key"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/listSoHD"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/soHoaDon"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/listNgayHD"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/ngayHoaDon"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/listMaNT"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/maNhaThuoc"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            />
        />
    </LinearLayout>
</LinearLayout>