<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/thongKeDoanhThu"
        android:textSize="40dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#F44336"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/thang"
            android:textStyle="bold"
            android:textColor="#F44336"
            android:layout_marginRight="5dp"
            />
        <EditText
            android:id="@+id/edtThang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/thang"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/nam"
            android:textStyle="bold"
            android:textColor="#F44336"
            android:layout_marginRight="5dp"
            />
        <EditText
            android:id="@+id/edtNam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/nam"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="200dp">
        <Button
            android:id="@+id/NT_btnDoanhThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doanhThu"
            app:backgroundTint="#4CAF50"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/NT_btnTroVe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/troVe"
            app:backgroundTint="#4CAF50"
            />
    </LinearLayout>

</LinearLayout>