<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_key"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/listSoHoaDon"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/soHoaDon"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/listMaThuoc"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/maThuoc"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/listSoLuong"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/soLuong"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            />
        />
    </LinearLayout>
</LinearLayout>